Revision history for WebService-Linode

{{$NEXT}}
    - Update link to Linode API docs

0.12  2013-09-25 14:58:18 EDT
    - Upstream API Changes
        - New methods:
            - Prefixed by account_: estimateinvoice, paybalance, updatecard
            - Prefixed by linode_:  mutate, webconsoletoken
        - New optional args for linode_update:
            - ms_ssh_disabled, ms_ssh_ip, ms_ssh_port, ms_ssh_user
    - Bugfix
        - fix avail_plans requiring optional planid argument
        - verify domain_resource_create and linode_config_create still require
          primary key as avail_plans does in api.spec
    - Dist Creation Changes
        - converted dist creation to milla
        - moved helper scripts to
          https://github.com/mikegrb/WebService-Linode-AuthorUtils

0.11  Nov 02 2012
    - fix primary keys marked as required param for domain_resource_create and
      linode_config_create (thanks Peter Stephan)
      - note: not fixed upstream yet gen-validation.pl output can not be used
        directly currently

0.10  Aug 20 2012
    - updated API definition from api.spec after Linode fix, closes #79093

0.09  Jul 29 2012
    - Forgot to bump version number in DNS.pm and Base.pm
        this is why all my other modules use Dist::Zilla

0.08  Jul 29 2012
    - new upstream API calls added
        many additions including nodebalancer support
        see for full changes http://j.mp/MNKKTf
    - patch from stephon for deprecated DNS.pm (closes rt #71833)

0.07  Feb 10 2012
    - Correct typo in resourceid argument to domain_resource->list

0.06  Jan 12 1012
    - Correct reference to module name in docs (closes rt #59535 reported
      by Paul Hansen)
    - Use direct object notation rather than indirect notation
    - new upstream API calls added

0.05  Mon Sep 14 2009
    - Apikey is no longer a required argument to the base constructor
    - New method in the base class, apikey for specifying or changing apikey