@@ -2,6 +2,8 @@ Revision history for WebService-Linode
 
 {{$NEXT}}
     - Update link to Linode API docs
+    - Clean up POD a bit, remove required/optional parameter headings when list
+      is empty
 
 0.12  2013-09-25 14:58:18 EDT
     - Upstream API Changes
